[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/tests2/scenario_tp_3times_extra_buildings_BG.png" type="Texture" id=1]
[ext_resource path="res://assets/tests2/scenario_tp_3times_extra_BG.png" type="Texture" id=2]
[ext_resource path="res://assets/tests2/64_tp.png" type="Texture" id=3]
[ext_resource path="res://scenes/stages/Character.gd" type="Script" id=4]
[ext_resource path="res://scenes/stages/Stage1.gd" type="Script" id=5]
[ext_resource path="res://assets/tests2/test2_upscale_lifecounter.png" type="Texture" id=6]
[ext_resource path="res://assets/tests2/test2_upscale_tiles_left.png" type="Texture" id=7]
[ext_resource path="res://assets/tests2/portal12.png" type="Texture" id=8]
[ext_resource path="res://assets/soundtrack/stage1_demo.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/tests2/test2_upscale_portallight.png" type="Texture" id=10]
[ext_resource path="res://tp_animations.tres" type="SpriteFrames" id=11]
[ext_resource path="res://assets/tests2/portal10.png" type="Texture" id=15]
[ext_resource path="res://assets/tests2/portal9.png" type="Texture" id=16]
[ext_resource path="res://assets/tests2/portal11.png" type="Texture" id=17]
[ext_resource path="res://assets/tests2/portal14.png" type="Texture" id=18]
[ext_resource path="res://assets/tests2/portal13.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.197103, 0.416213 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -1424.89, -249.144, -1413.76, -248.791, -1411.36, -246.451, -1410.89, -234.653, -1410.89, -227.102, -1408.06, -225.214, -1405.7, -221.911, -1407.59, -218.607, -1408.53, -213.888, -1409.48, -208.224, -1408.53, -202.561, -1409.95, -194.066, -1411.36, -190.291, -1410.89, -182.74, -1409.01, -176.133, -1408.53, -168.582, -1406.65, -160.559, -1407.12, -150.648, -1407.59, -141.681, -1407.59, -135.546, -1406.65, -126.107, -1405.23, -114.309, -1401.93, -94.0157, -1400.04, -80.8015, -1398.15, -71.3627, -1392.49, -67.5872, -1392.49, -62.8678, -1392.49, -60.0362, -1435.48, -59.8255, -1430, -120.99, -1442.93, -145.209, -1441.88, -165, -1436.88, -175.75, -1431.72, -192.398, -1429.27, -220.35, -1441.3, -224.916, -1441.41, -229.816, -1433.06, -233.825, -1429.94, -236.609, -1429.72, -247.3 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 43.5151, 23.8914, 1281.45, 23.8914, 1281.45, 1001, 43.5151, 1001 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 43.5151, 0, 1310, 0, 1310, 21.8176, 43.5151, 21.8176 )

[sub_resource type="TileSet" id=5]
0/name = "test2_upscale_tiles_left.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -39, 1893, 1310, 1001 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 23.6716, 131.835 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 62.2274, 13.2448 )

[node name="Stage1" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="far" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.005, 0.005 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/far"]
texture = ExtResource( 2 )

[node name="bg" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 0.05 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/bg"]
texture = ExtResource( 1 )

[node name="status" type="HBoxContainer" parent="ParallaxBackground"]
margin_right = 364.0
margin_bottom = 153.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeCounter" type="TextureRect" parent="ParallaxBackground/status"]
margin_right = 360.0
margin_bottom = 153.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStats" type="Label" parent="ParallaxBackground/status"]
self_modulate = Color( 0, 1, 0.0862745, 1 )
margin_left = 364.0
margin_top = 69.0
margin_right = 364.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="KinematicBody2D" parent="."]
position = Vector2( -1415.17, -157.177 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CharacterHitbox" type="CollisionShape2D" parent="Character"]
position = Vector2( -7.2207, 2.46518 )
scale = Vector2( 249.856, 199.409 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Character"]
position = Vector2( 0, -329.723 )
current = true
limit_left = -1445
limit_top = -1445
limit_right = 5432
limit_bottom = 1443
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.75
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CharacterModel" type="Sprite" parent="Character"]
visible = false
position = Vector2( 2.37854, -17.2435 )
texture = ExtResource( 3 )

[node name="charmodel_anim" type="AnimatedSprite" parent="Character"]
position = Vector2( -0.796265, -10.1002 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 11 )
animation = "idle"
playing = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Character"]
position = Vector2( 1415.17, 157.177 )
occluder = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
format = 1
tile_data = PoolIntArray( 524265, 0, 0, 458752, 0, 0, 458777, 0, 0, 458801, 0, 0, 458825, 0, 0, 458849, 0, 0, 458875, 0, 0 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -91.9742, 259.544 )
texture = ExtResource( 10 )
shadow_enabled = true
shadow_filter = 3
shadow_filter_smooth = 6.3

[node name="portal" type="Area2D" parent="."]
position = Vector2( -92.1366, 259.136 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="portal"]
position = Vector2( -11.1362, 0 )
frames = SubResource( 6 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal"]
shape = SubResource( 7 )

[node name="portal2" type="Area2D" parent="."]
position = Vector2( 201.86, -273.621 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="portal2"]
position = Vector2( -7.49155, 0 )
frames = SubResource( 6 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal2"]
scale = Vector2( 0.701338, 9.79302 )
shape = SubResource( 8 )
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="body_entered" from="portal" to="Character" method="_on_portal_body_entered"]
